src/test/ui/rfc-2361-dbg-macro/dbg-macro-feature-gate.stderr
error[E0658]: macro dbg! is unstable (see issue #54306)
  --> $DIR/dbg-macro-feature-gate.rs:4:5
   |
LL |     dbg!(1);
   |     ^^^^^^^^
   |
   = help: add #![feature(dbg_macro)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
