src/test/ui/rfc-2361-dbg-macro/dbg-macro-feature-gate.rs
// Feature gate test for `dbg!(..)`.

fn main() {
    dbg!(1);
}
